# kiro-notebook

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.agent/: acp-reference.md  architecture.md
acp-python-example/: acp_01_new_session.py  acp_02_load_session.py  acp_04_streaming.py
doc/: acp-guide-zh.md  acp-guide.md  blog-kiro-acp-as-ai-sdk-zh.md  blog-kiro-acp-as-ai-sdk.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  commands.rs  file_reader.rs  lib.rs  main.rs  mcp_server.rs
temp/: acp_03_set_model.py
