[package]
name = "kiro-notebook"
version = "0.1.0"
description = "Kiro Notebook - Local NotebookLM Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "kiro_notebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
pdf-extract = "0.7"
docx-rs = "0.4"
chrono = "0.4"
libc = "0.2"
dirs = "5"
